--- a/tinkerkit_description/CMakeLists.txt
+++ b/tinkerkit_description/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(ament_cmake REQUIRED)
 find_package(urdf REQUIRED)
 
 install(
-  DIRECTORY launch meshes urdf rviz 
+  DIRECTORY meshes urdf rviz launch
   DESTINATION share/${PROJECT_NAME}
 )
 
